--- a/src/App.module.css
+++ b/src/App.module.css
@@ -22,5 +22,6 @@ img {
   grid-template-columns: repeat(2, 1fr);
   gap: 1rem;
   padding: 2rem;
-  border-left: 2px solid rgb(236 236 236);
+  border-left: 3px solid var(--action-background);
+  /* background-color: var(--action-background); */
 }
