--- a/src/index.css
+++ b/src/index.css
@@ -34,8 +34,12 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
+  min-width: 100vw;
   min-height: 100vh;
+}
+
+#root {
+  min-width: 100vw;
 }
 
 h1 {
